# somethings

./: bookmarks_11_26_18.html  bookmarks_20190111.html
NNet/keras/AutoEncoder/: DAE.py
cplus/: CMakeLists.txt
cplus/base/: CMakeLists.txt  lambda.cc  variadic_template.cc
project-plan/: 科委_1127.xmind  科委_20181127_V1.0.pptx  项目实施方案v2.docx
pythons/: vectorDot.py
pythons/Cython/LearnCython/: cqueue.pxd  queue.c  queue.pyx  test_queue.py
pythons/Cython/hello_world/: cython_hello_world.c  cython_hello_world.pyx  hello_world.c  makefile
pythons/Cython/kaldiCython/: makefile
pythons/keras/: Attention.py  AttentionLayers.py  DFSMNLayers.py  TDNNLayers.py  reuseXception.py  tensorboard3.py  tfDFSMN.py
pythons/keras/DenoiseAE/: DAE.py  DAEExample.py  keras_learning_rate.py
pythons/keras/EachSpeaker/: ds_constant.py  (+1 more)
pythons/langRecSys/: BNFServer.py  IVEServer.py  communicate.py  cpModels.sh  langRecConfig.py  langRecManager.py  runKaldiSteps.sh  runSystem.sh  ubuntuServer-NUC-langRec.md
pythons/mySpeech/: learnPySox.py  learnWebrtcvad.py  librosaLearn.py
pythons/pandas/: learnPandas.py
pythons/pyinstaller/: readme.md
pythons/sklearn/: learn_SVM.py
pythons/socket/: learnSocket.py
pythons/socketClientServer/: BNFServer.py  IVEServer.py  LRModelMsg.py  RESServer.py  communicate.py  download_server.py  langRecConfig.py  langRecManager.py  runClean.sh  runKaldiSteps.sh
pythons/struct/: learnStruct.py
pythons/subprocess/: pySubProcess.py
shells/: recurrentRead.sh
ubuntu/ubuntuCore/: ubuntuCore.md
ubuntu/ubuntuServer/: ubuntuServer-NUC-langRec.md
(+24 files in other folders)
